--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
-    "start:auth": "nest start apps/payment --watch",
+    "start:auth": "nodemon ./apps/auth/src/main.ts --watch",
+    "start:movies": "ts-node ./apps/movies/src/main.ts --watch",
     "start:dev": "nest start --watch",
+    "start:payment": "ts-node ./apps/payment/src/main.ts --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/nest-gateway-microservice/main",
+    "start:all": "concurrently \"npm run start:auth\" \"npm run start:dev\" \"npm run start:movies\" \"npm run start:payment\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -24,11 +27,18 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/microservices": "^10.4.6",
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
+    "class": "^0.1.4",
+    "class-validator": "^0.14.1",
+    "mongoose": "^8.7.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -38,12 +48,15 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "concurrently": "^9.0.1",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "nodemon": "^3.1.7",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
